Code changed to typescript by changing configurations

--- a/src/Sass/components/_message.scss
+++ b/src/Sass/components/_message.scss
@@ -9,7 +9,7 @@
 
   .chat-message {
     display: flex;
-    align-items: start;
+    align-items: flex-start;
     margin-bottom: 15px;
 
     .user-avatar {
