--- a/src/Sass/pages/_group.scss
+++ b/src/Sass/pages/_group.scss
@@ -93,3 +93,22 @@
     
   }
 }
+
+// Rotate the element as spinner
+.spinner {
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.loading{
+  margin-bottom: 10px;
+}
