--- a/src/Sass/App.scss
+++ b/src/Sass/App.scss
@@ -11,6 +11,7 @@
 @import "./components/avatar";
 @import "./components/message";
 @import "./components/modal";
+@import "./components/pagination";
 
 // Pages
 @import "./pages/authPage";
